Fix padding top too high

--- a/pydaygal/static/sass/pydaygal.scss
+++ b/pydaygal/static/sass/pydaygal.scss
@@ -27,8 +27,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     bottom: 200px;
     font-size: $font-size-root;
-    /* bottom = footer height */
-}
+    /* bottom = footer height */}
 
 b,
 strong {
@@ -90,7 +89,7 @@ footer {
 }
 
 .section {
-  padding-top: 200px;
+  padding-top: 120px;
   padding-bottom: 200px;
 }
 
